# clean-dashboard

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml
docs/: AGENTS.md  BATTERY_DISPATCH.md  CLAUDE.md
public/data/: zones.json
src/: App.tsx  index.css
src/components/atoms/: Button.tsx  Metric.tsx  Modal.tsx  Select.tsx  Slider.tsx  Toggle.tsx  index.ts
src/components/molecules/: index.ts
src/components/organisms/: ControlPanel.tsx  Header.tsx  MetricsPanel.tsx  VisualizationPanel.tsx  index.ts
src/features/metrics/: ElccAnalysisMetric.tsx  MetricsSelectionModal.tsx  calculations.ts  index.ts
src/features/optimizer/: OptimizerModal.tsx
src/features/settings/: SettingsModal.tsx
src/features/tutorial/: TutorialOverlay.tsx  tutorialSteps.ts
src/features/visualization/: AnnualHeatmap.tsx  BatteryChart.tsx  CapacitySweepChart.tsx  CostSweepChart.tsx  GasBaselineChart.tsx  LcoeChart.tsx  OptimizerSweepChart.tsx  PriceChart.tsx  ResourceSweepChart.tsx  WeeklyChart.tsx
src/hooks/: useWasm.ts
src/lib/: modelLoader.ts  simulator-worker.ts  wasmSerde.ts  worker-pool.ts
src/lib/wasm/: .gitkeep
src/lib/wasm/pkg/: energy_simulator.d.ts  energy_simulator.js  package.json  (+2 more)
src/stores/: elccStore.ts  metricsStore.ts  pricingStore.ts  settingsStore.ts  simulationStore.ts  sweepStore.ts  tutorialStore.ts  uiStore.ts
src/types/: index.ts  metrics.ts
wasm-src/: Cargo.toml  generate_models.sh
wasm-src/benches/: optimizer_v2_bench.rs  simulation_bench.rs
wasm-src/docs/: GLOBAL_OPTIMIZATION_APPROACH.md
wasm-src/src/: lib.rs  types.rs  zones.rs
wasm-src/src/economics/: depreciation.rs  elcc.rs  land_use.rs  lcoe.rs  mod.rs  pricing.rs
wasm-src/src/optimizer/: cache.rs  empirical_model.rs  greedy.rs  incremental_walk.rs  mod.rs  model_cache.rs  v1_adaptive.rs  v2_accuracy_audit.rs  v2_adaptive_audit.rs  v2_hierarchical.rs
wasm-src/src/optimizer/v3/: global_grid.rs  mod.rs  oracle.rs  scenarios.rs  types.rs
wasm-src/src/simulation/: core.rs  mod.rs
wasm-src/src/simulation/battery/: default.rs  hybrid.rs  mod.rs  peak_shaver.rs
wasm-src/tests/: cross_validation.rs  economics_parity.rs  incremental_walk_parity.rs  model_validation.rs  optimizer_v2_accuracy_audit.rs  optimizer_v2_full.rs  optimizer_v2_quick.rs  optimizer_v2_validation.rs  v3_oracle_consistency.rs  v3_progress_gates.rs  v3_smoke.rs
wasm-src/tests/fixtures/: expected_results.json
